--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "highlight.js": "^11.10.0",
     "marked": "^13.0.2",
+    "prismjs": "^1.29.0",
     "sql.js": "^1.10.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
@@ -27,6 +29,7 @@
     "@tsconfig/node20": "^20.1.2",
     "@types/bootstrap": "^5.2.10",
     "@types/node": "^20.11.28",
+    "@types/prismjs": "^1.26.4",
     "@types/sql.js": "^1.4.9",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
